--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www"
-
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,6 +12,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongoose": "^6.8.3",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.20"
   }
